projetGL/src/test/deca/context/invalid/provided/invalide_07_op_ariths_str.deca
// Description : test les operations aithmetiques invalides
// Sortie :
// ERROR  A MODIFIER

{
    int number = 11;
    string s = "";
    s = s + number;
}